Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignBooleanInteger.quorum
class Main
    action Main
        boolean bool = false
        bool = cast(boolean, 5)
    end
end